@@ -1,3 +1,6 @@
+(2002/03/08 - broeker) Fix completely broken handling of filenames with blanks
+	               in namelist files.  Use fgets + sscanf, not fscanf, and
+		       don't split at whitespace inside "" quotes.
 (2001/01/04 - broeker) Survive Cygwin "binmode" mounted filesystems by 
 	               explicitly forcing text mode for source files.
 (2002/01/02 - broeker) Updated files supplied or generated by automake to 
